--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,7 @@
 name: continuous integration
 on:
   push:
-    branches: [**]
+    branches: ["**"]
 jobs:
   test_codebase:
     runs-on: ubuntu-latest
